# skyrim_savegame_viewer

./: Cargo.toml  index.html
src/: main.rs
src/components/: collapsible_table.rs  form_id_resolver.rs  mod.rs  save_game.rs
src/controller/: form_id.rs  get.rs  mod.rs
