[package]
name = "skyrim_savegame_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
skyrim_savegame = { git = "https://github.com/Jupp56/skyrim_savegame" }
js-sys = "0.3"
gloo-file = "0.2"
gloo-utils="0.1"
gloo-console = "0.2"
image = "0.23"
base64 = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "File", 
    "Headers",  
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Blob"]